--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
-  <color name="splashscreen_background">#F75469</color>
-  <color name="iconBackground">#FFFFFF</color>
+  <color name="splashscreen_background">#1c1414</color>
+  <color name="iconBackground">#1c1414</color>
   <color name="colorPrimary">#023c69</color>
-  <color name="colorPrimaryDark">#F75469</color>
+  <color name="colorPrimaryDark">#1c1414</color>
 </resources>
